Partial_14Dec2021/force-app/main/default/objects/Warranty_Master__c/Warranty_Master__c.object-meta.xml
<CustomObject>
    <label>Warranty Master</label>
    <nameField>
        <label>Warranty Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warranty Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>