Partial_14Dec2021/force-app/main/default/objects/Warranty_Master__c/fields/Manufactured_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Date_Time__c</fullName>
    <label>Manufactured Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>