Partial_14Dec2021/force-app/main/default/objects/Warranty_Master__c/fields/Manufacturer_Name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Name__c</fullName>
    <label>Manufacturer Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>