Partial_14Dec2021/force-app/main/default/objects/Warranty_Master__c/fields/Manufacturing_Code__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Code__c</fullName>
    <description>To store manufacturing code.</description>
    <label>Manufacturing Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>