Partial_14Dec2021/force-app/main/default/objects/Warranty_Master__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <externalId>true</externalId>
    <label>Serial Number(QR Code)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>