Partial_14Dec2021/force-app/main/default/objects/Warranty_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Serial_Number__c</columns>
    <columns>Manufacturing_Code__c</columns>
    <columns>Manufacturer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>